<resources>
    <string name="app_name">Notes360</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="download_notes">Download Notes</string>
    <string name="sign_in">Sign In / Sign Up</string>
    <string name="sign_out">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="welcome_activity_handler_thread_name">Welcome Activity Thread</string>
    <string name="launch_activity_thread_name">Launch Activity Thread</string>
    <string name="ask_for_registered_email">Please enter your registered email, inorder to receive link</string>
    <string name="ask_for_right_email_and_password">Please input your valid email and password</string>
    <string name="ask_for_email_and_password">email and password is needed for login, please check</string>
    <string name="frag_signin">FragSignIn</string>
    <string name="add_frag_signin">AddFragSignIn</string>
    <string name="frag_signup">FragSignUp</string>
    <string name="add_frag_signup">AddFragSignUp</string>
    <string name="frag_password_reset">FragPassWordReset</string>
    <string name="add_frag_password_reset">AddFragPassWordReset</string>
    <string name="frag_resend_verif">FragResendVerification</string>
    <string name="add_frag_resend_verif">AddFragResendVerification</string>
    <string name="passwords_not_match">Passwords do not match, check it please</string>
    <string name="fill_all_fields">To create an account all fields must be filled</string>
    <string name="note_saved">Note Saved</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="upload_dialog_message">Uploading notes to the cloud will overwrite all previous cloud saved notes with the notes saved currently on this device</string>
    <string name="download_dialog_message">Downloading notes from the cloud will overwrite notes saved currently on this device with notes downloaded from the cloud</string>
    <string name="download_progressbar_msg">Please wait, while note downloads</string>
    <string name="upload_progress_bar_msg">Please wait, while note uploads</string>
    <string name="note_must_have_title_and_content">Note must have a title and content to be saved</string>
    <string name="criteria_to_upload_note">Must be logged in with a verified account to upload notes</string>
    <string name="criteria_to_download_note">Must be logged in with a verified account to download notes</string>
    <string name="must_have_note">You need to have a saved note before upload is possible</string>
    <string name="hint_note_title">Note Title</string>
    <string name="hint_note_content">Note Content</string>
    <string name="welcome_screen_text">Notes 36</string>
    <string name="no_note_found_msg">No note found on this device. All saved notes will appear here</string>
    <string name="forgot_password_header_text">Yo! Forgot Your Password?</string>
    <string name="forgot_password_sub_text">Well no problem! enter your email and we will send a reset link</string>
    <string name="hint_registered_email">Registered email</string>
    <string name="btn_password_reset_text">Reset Password</string>
    <string name="hint_password">password</string>
    <string name="btn_resend_verif_text">Resend mail</string>
    <string name="sign_header_text">Account Login</string>
    <string name="hint_email">Email</string>
    <string name="btn_signin_text">Login</string>
    <string name="create_account_tv_text">Create an Account</string>
    <string name="forgot_password_tv_text">Forgot PassWord?</string>
    <string name="resend_verification_email_tv_text">Resend Verification Email</string>
    <string name="create_account_header_text">Create an Account</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="btn_signup_text">SignUp</string>
</resources>