<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/sign_header_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="15dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="@+id/login_pass_et"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="@+id/textView4" />

                    <EditText
                        android:id="@+id/login_email_et"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/edit_text"
                        android:drawableEnd="@drawable/ic_baseline_email_24"
                        android:ems="10"
                        android:fontFamily="@font/poppins_semibold"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:paddingStart="4dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/login_pass_et"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_text"
                        android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
                        android:ems="10"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:paddingStart="4dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/login_email_et"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/login_email_et"
                        app:layout_constraintTop_toBottomOf="@+id/login_email_et" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/colorPrim"
                        android:clickable="true"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/btn_signin_text"
                        android:textSize="10sp"
                        app:cornerRadius="15dp"
                        app:layout_constraintEnd_toEndOf="@+id/login_pass_et"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/login_pass_et"
                        app:layout_constraintTop_toBottomOf="@+id/login_pass_et" />

                    <TextView
                        android:id="@+id/forgot_pass_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abril_fatface"
                        android:text="@string/forgot_password_tv_text"
                        android:textStyle="bold"
                        app:layout_constraintBaseline_toBaselineOf="@+id/create_acct_tv"
                        app:layout_constraintEnd_toEndOf="@+id/view"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/create_acct_tv" />

                    <EditText
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                        app:layout_constraintEnd_toStartOf="@+id/textView4"
                        app:layout_constraintStart_toStartOf="@+id/login_pass_et"
                        app:layout_constraintTop_toTopOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/create_acct_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/abril_fatface"
                        android:text="@string/create_account_tv_text"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/view2"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/abril_fatface"
                        android:text="or"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

                    <TextView
                        android:id="@+id/resend_code_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/abril_fatface"
                        android:text="@string/resend_verification_email_tv_text"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/forgot_pass_tv"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="@+id/create_acct_tv"
                        app:layout_constraintTop_toBottomOf="@+id/create_acct_tv"
                        app:layout_constraintVertical_bias="0.0" />

                    <ProgressBar
                        android:id="@+id/signin_progress"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#B31717"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login_pass_et" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>